# komcat_CMakeProject2

CMakeProject2/: # How to Add New Pages to Raylib Window.md  CMakeLists.txt  CMakeProject2.cpp  CMakeProject2.h  DataServerConfig.json  DraggableNode.cpp  FpsDisplay.h  GraphVisualizer.cpp  GraphVisualizer.h  IOConfigManager.cpp  IOConfigManager.h  InitializationWindow.cpp  InitializationWindow.h  MotionConfigEditor.cpp  MotionConfigEditor.h  MotionConfigManager.cpp  MotionConfigManager.h  MotionTypes.h  PerformanceOverlay.h  RaylibToggleButton.h  Readme.md  RealtimeChartPage.cpp  RealtimeChartPage.h  StatusPage.cpp  StatusPage.h  Version.h  Version.h.backup  Version.h.in  VisualizePage.cpp  VisualizePage.h  acs_monitor.cpp  acs_monitor.h  camera_exposure_config.json  camera_to_object_offset.json  camera_window.cpp  camera_window.h  claudeainote.txt  client_manager.cpp  client_manager.h  data_display_config.json  (+17 more)
CMakeProject2/Programming/: BlockPropertyRenderers.cpp  BlockPropertyRenderers.h  BlockSequenceConverter.cpp  BlockSequenceConverter.h  FeedbackUI.cpp  FeedbackUI.h  Here's a step-by-step summary for adding new block commands to your framework.md  MachineBlockUI.cpp  MachineBlockUI.h  MacroEditState.h  MacroManager.cpp  MacroManager.h  ProgramManager.cpp  ProgramManager.h  UserPromptUI.cpp  UserPromptUI.h  readme_virtual_machine_operation.md  virtual_machine_operations.h  virtual_machine_operations_adapter.h
CMakeProject2/docs/: Version Management - Quick Start Guide.md  module implementation guide.md  version management.md
CMakeProject2/include/: HexControllerWindow.cpp  HexControllerWindow.h  HexRightControllerWindow.cpp  HexRightControllerWindow.h  MockUserInteractionManager.h  ModuleConfig.h  ProcessBuilders.cpp  ProcessBuilders.h  ProcessControlPanel.cpp  ProcessControlPanel.h  ProcessRunner.cpp  ProcessStep.cpp  ProcessStep.h  SequenceStep.cpp  SequenceStep.h  cld101x_client.cpp  cld101x_client.h  cld101x_manager.cpp  cld101x_manager.h  cld101x_operations.cpp  cld101x_operations.h  client_manager.h  logger.cpp  logger.h  machine_operations.cpp  machine_operations.h  python_process_managaer.h  random.cpp  tcp_client.cpp
CMakeProject2/include/SMU/: keithley2400_client.cpp  keithley2400_client.h  keithley2400_manager.cpp  keithley2400_manager.h  keithley2400_operations.cpp  keithley2400_operations.h
CMakeProject2/include/camera/: CameraExposureManager.cpp  CameraExposureManager.h  CameraExposureTestUI.cpp  CameraExposureTestUI.h  PylonCameraAdapter.h  camera_window.cpp  camera_window.h  pylon_camera.cpp  pylon_camera.h  pylon_camera_test.cpp  pylon_camera_test.h
CMakeProject2/include/data/: DataChartManager.cpp  DataChartManager.h  DatabaseManager.cpp  DatabaseManager.h  DigitalDisplayWithChart.cpp  DigitalDisplayWithChart.h  OperationResultsManager.cpp  OperationResultsManager.h  data_client_manager.cpp  data_client_manager.h  global_data_store.cpp  global_data_store.h  product_config_manager.cpp  product_config_manager.h
CMakeProject2/include/eziio/: EziIO_Manager.cpp  EziIO_Manager.h  EziIO_UI.cpp  EziIO_UI.h  IOControlPanel.cpp  IOControlPanel.h  PneumaticManager.cpp  PneumaticManager.h  PneumaticSlide.cpp  PneumaticSlide.h  PneumaticUI.cpp  PneumaticUI.h
CMakeProject2/include/motions/: MotionConfigEditor.cpp  MotionConfigEditor.h  MotionConfigManager.cpp  MotionConfigManager.h  acs_controller.cpp  acs_controller.h  acs_controller_manager.cpp  acs_controller_manager.h  acs_monitor.h  global_jog_panel.cpp  global_jog_panel.h  motion_control_layer.cpp  motion_control_layer.h  pi_analog_manager.cpp  pi_analog_manager.h  pi_analog_reader.cpp  pi_analog_reader.h  pi_controller.cpp  pi_controller.h  pi_controller_manager.cpp  pi_controller_manager.h
CMakeProject2/include/motions/ACSC HOMEALL buffer code/: buffer1.md  buffer2.md
CMakeProject2/include/scanning/: AdaptivePowerScanner.cpp  AdaptivePowerScanner.h  AdaptiveScanningUI.cpp  AdaptiveScanningUI.h  SequentialOptimizedScanner.cpp  SequentialOptimizedScanner.h  optimized_scanning_ui.cpp  optimized_scanning_ui.h  scan_data_collector.cpp  scan_data_collector.h  scanning_algorithm.cpp  scanning_algorithm.h  scanning_parameters.h  scanning_ui.cpp  scanning_ui.h
CMakeProject2/include/script/: ScriptRunnerAdapter.h  print_operation.cpp  print_operation.h  script_editor_ui.cpp  script_editor_ui.h  script_executor.cpp  script_executor.h  script_parser.cpp  script_parser.h  script_print_viewer.cpp  script_print_viewer.h  script_runner.cpp  script_runner.h  script_ui_manager.h
CMakeProject2/include/siphog/: siphog_client.cpp  siphog_client.h
CMakeProject2/include/ui/: ControllerAdapters.h  DataClientManagerAdapter.h  DraggableNode.h  GraphVisualizer.cpp  GraphVisualizer.h  HierarchicalControllerAdapters.h  MenuManager.cpp  MenuManager.h  MotionControlHierarchicalAdapter.h  MotionGraphic.cpp  MotionGraphic.h  OperationsDisplayUI.cpp  OperationsDisplayUI.h  ToggleableUIAdapter.h  ToolbarMenu.cpp  ToolbarMenu.h  ToolbarStateManager.h  VerticalToolbarMenu.cpp  VerticalToolbarMenu.h  toolbar.cpp  toolbar.h
CMakeProject2/source/: DraggableNode.cpp  camera_window.cpp  client_manager.cpp  pylon_camera_test.cpp  randomwindow.cpp  toolbar.cpp
CMakeProject2/source/motions/: MotionConfigEditor.cpp  MotionConfigManager.cpp  acs_monitor.cpp  pi_controller.cpp
html/: scanning_browser.html
serverPython/: FNW_SERVER_V06_test_plot.py  Keithley 2400 SourceMeter Server-Client System.md  Keithley2400_basic_test.py  Keithley2400_client.py  Keithley2400_server.py  cld101x_server.py  client.py  find_all_devices.py  keithley_1stch.py  server.py  server2.py
training_model/: filter_json_data.py  predict_scanner_peak.py  scanner_predictor_module.py  training_script.py
training_model/models/: scanner_peak_predictor_feature_scaler.pkl  scanner_peak_predictor_metadata.json  scanner_peak_predictor_model.keras  scanner_peak_predictor_target_scaler.pkl
